--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     tty: true
     build:
       dockerfile: Dockerfile
-      context: .
+      context: ../
     volumes:
-      - .:/work
+      - ../:/work
