--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -1,2 +1,2 @@
-DOC="./document.tex"
-OPTION="--output-directory=./dist"
+BIBINPUTS=$BIBINPUTS:/usr/local/texlive/texmf-local/bibtex/bib:${PWD}/references
+BSTINPUTS=$BSTINPUTS:/usr/local/texlive/texmf-local/bibtex/bst
