--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,10 +1,12 @@
-version: "3"
+version: "3.2"
 services:
   lualatex:
-    command: lualatex ${DOC} ${OPTION}
     tty: true
     build:
       dockerfile: Dockerfile
       context: ../
     volumes:
       - ../:/work
+    environment:
+      - $BIBINPUTS
+      - $BSTINPUTS
